--- a/orm4/orm4/Site.Master
+++ b/orm4/orm4/Site.Master
@@ -47,11 +47,12 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Application name</a>
+                    <a class="navbar-brand" runat="server" href="~/">LibNet</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/UserList">Users</a></li>
+                        <li><a runat="server" href="~/Authors">Books Authors</a></li>
                         <li><a runat="server" href="~/BookList">Books</a></li>
                         <li><a runat="server" href="~/Custom">Custom</a></li>
                     </ul>
