первый запрос почти готов

--- a/orm4/orm4/Content/Site.css
+++ b/orm4/orm4/Content/Site.css
@@ -29,3 +29,13 @@ textarea {
         padding: 0;
     }
 }
+
+button[type=submit] {
+    margin-top: 15px;
+    padding: 5px;
+}
+
+#ListView1 label {
+    width: 120px;
+    display: inline-block;
+}
