--- a/orm4/orm4/Login.Master
+++ b/orm4/orm4/Login.Master
@@ -6,7 +6,9 @@
 <head runat="server">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - My ASP.NET Application</title>
+    <link rel="stylesheet" href="Style.css" />
+
+    <title><%: Page.Title %>LibNet Service</title>
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
