--- a/orm4/orm4/Login.Master
+++ b/orm4/orm4/Login.Master
@@ -51,7 +51,11 @@
                     </button>
                     <a class="navbar-brand" runat="server" href="~/">LibNet Service</a>
                 </div>
-                
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a runat="server" href="~/Registration">Registration</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="container body-content">
